swagger norm
