# docs/swagger.json
@@ -12,6 +12,15 @@
         "/health": {
             "get": {
                 "description": "Check if the service is running.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "health"
+                ],
                 "summary": "Health check",
                 "responses": {
                     "200": {
@@ -32,10 +41,13 @@
                 "produces": [
                     "application/json"
                 ],
+                "tags": [
+                    "proxy"
+                ],
                 "summary": "Proxy request",
                 "parameters": [
                     {
-                        "description": "Proxy request payload",
+                        "description": "Proxy request",
                         "name": "request",
                         "in": "body",
                         "required": true,
