# handlers/healthCheck.go
@@ -4,9 +4,12 @@ import (
 	"net/http"
 )
 
-// HealthCheckHandler handles the health check request.
+// HealthCheckHandler godoc
 // @Summary Health check
 // @Description Check if the service is running.
+// @Tags health
+// @Accept  json
+// @Produce  json
 // @Success 200 {string} string "OK"
 // @Router /health [get]
 func HealthCheckHandler(w http.ResponseWriter, _ *http.Request) {
