# handlers/proxyHandler.go
@@ -12,13 +12,13 @@ import (
 
 var reqStore sync.Map
 
-// PrHandler
-//
+// PrHandler godoc
 // @Summary Proxy request
 // @Description Proxy an HTTP request to the specified URL.
+// @Tags proxy
 // @Accept  json
 // @Produce  json
-// @Param   request body     models.Request true "Proxy request payload"
+// @Param   request body models.Request true "Proxy request"
 // @Success 200 {object} models.Response
 // @Router /proxy [post]
 func PrHandler(w http.ResponseWriter, r *http.Request) {
